fix(slider): track align center when no label provided in editable slider

--- a/packages/slider/src/slider.css
+++ b/packages/slider/src/slider.css
@@ -137,3 +137,8 @@ governing permissions and limitations under the License.
     padding: 0;
     margin: 0;
 }
+
+:host([label-visibility='none']) #track {
+    grid-area: number;
+    align-self: flex-end;
+}
